--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -3,7 +3,7 @@ name: Example workflow for Python using Snyk
 on:
   push:
     branches:
-      - main  # Change to your desired branch or remove to run on all pushes 
+      - main  # Change to your desired branch or remove to run on all pushes
 
 jobs:
   security:
@@ -11,47 +11,63 @@ jobs:
 
     steps:
       # Step 1: Checkout code
-      - uses: actions/checkout@v2  # Updated to use a stable checkout action
+      - uses: actions/checkout@v2  # Checkout the code to scan
 
       # Step 2: Run Snyk to check for vulnerabilities
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/python@master
         continue-on-error: true
         env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}  # Using your Snyk API token securely
         with:
-          command: code test  # Correct command for testing vulnerabilities
-          args: --sarif-file-output=snyk.sarif
+          command: code test  # Run Snyk test command to scan the code
+          args: --sarif-file-output=snyk.sarif  # Save results as SARIF
 
       # Step 3: Count the number of security issues found by Snyk
       - name: Total security issues
         run: |
           length=$(cat snyk.sarif | jq '.runs[0].results | length')
-          echo "RESULTS_LENGTH=$length" >>$GITHUB_ENV
+          echo "RESULTS_LENGTH=$length" >> $GITHUB_ENV  # Store result length
 
-      # Step 4: Create an issue if vulnerabilities are found
+      # Step 4: Create a GitHub Issue if vulnerabilities are found
       - name: Create GitHub Issue for vulnerabilities
-        if: env.RESULTS_LENGTH != '0'
+        if: env.RESULTS_LENGTH != '0'  # Only proceed if there are vulnerabilities
         run: |
-          # Extract the first vulnerability's title and description from the SARIF file
-          vulnerability_title=$(jq -r '.runs[0].results[0].message.text' snyk.sarif)
-          vulnerability_severity=$(jq -r '.runs[0].results[0].level' snyk.sarif)
-          issue_title="Snyk Vulnerability Found: $vulnerability_title"
-          issue_body="Snyk has detected a vulnerability with the severity level of $vulnerability_severity. Please review the following details:\n\n$(cat snyk.sarif)"
+          # Initialize issue body with a heading
+          issue_body="### Vulnerability Details:\n\n"
 
-          # Use curl to create a GitHub issue via the GitHub API
+          # Loop through all vulnerabilities and extract relevant information
+          for i in $(seq 0 $(($RESULTS_LENGTH - 1))); do
+            vulnerability_title=$(jq -r ".runs[0].results[$i].message.text" snyk.sarif)
+            vulnerability_severity=$(jq -r ".runs[0].results[$i].level" snyk.sarif)
+            vulnerability_url=$(jq -r ".runs[0].results[$i].links[0].uri" snyk.sarif)
+            vulnerability_location=$(jq -r ".runs[0].results[$i].locations[0].physicalLocation.artifactLocation.uri" snyk.sarif)
+            
+            # Add details for each vulnerability
+            issue_body+="**Title**: $vulnerability_title\n"
+            issue_body+="**Severity**: $vulnerability_severity\n"
+            issue_body+="**Description**: [More details]($vulnerability_url)\n"
+            issue_body+="**File/Location**: $vulnerability_location\n\n"
+            
+            # Additional sections for remediation, impact, and actions
+            issue_body+="### How to Fix:\n[Refer to Snyk's fix or mitigation guide]\n\n"
+            issue_body+="### Impact:\n[Explain the potential impact of the vulnerability]\n\n"
+            issue_body+="### Action Required:\nPlease review and address this vulnerability.\n\n"
+          done
+
+          # Create a new GitHub issue using the extracted data
           curl -X POST \
             -H "Authorization: token $GITHUB_TOKEN" \
             -H "Accept: application/vnd.github.v3+json" \
-            -d '{"title":"'"$issue_title"'","body":"'"$issue_body"'","labels":["vulnerability","bug"]}' \
+            -d '{"title":"Snyk Vulnerability Found: '"$vulnerability_severity $vulnerability_title"'","body":"'"$issue_body"'","labels":["vulnerability","bug"]}' \
             https://api.github.com/repos/${{ github.repository }}/issues
 
       # Step 5: Fail the job if vulnerabilities are found
-      - name : Pass_or_Fail_the_job
+      - name: Pass_or_Fail_the_job
         run: |
-            if [ "$RESULTS_LENGTH" !=0 ]; then
-               echo "Job Failed"
-               exit 1
-            else
-               echo "Pass"
-            fi
+          if [ "$RESULTS_LENGTH" != "0" ]; then
+            echo "Job Failed"
+            exit 1  # Fail the job if vulnerabilities are found
+          else
+            echo "Pass"  # Otherwise, pass the job
+          fi
