--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -16,7 +16,7 @@ jobs:
       # Run Snyk to check for vulnerabilities
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/python@master
-       
+        continue-on-error: true
         env: 
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
