--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -22,6 +22,10 @@ jobs:
         with:
           command: code test
           args: --sarif-file-output=snyk.sarif
+      - name: upload report to github code scanning
+        uses: github/codeql-action/upload-sarif@v1
+        with:
+          sarif_file: results.sarif
 
       # Calculate the length of vulnerabilities found
       - name: Total security issues
