--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -1,10 +1,13 @@
-name: Example workflow for Python using Snyk
+name: Snyk Security Scan with SARIF Upload
 on: push
+
 jobs:
   security:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/python@master
         continue-on-error: true
@@ -12,9 +15,16 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           command: code test
-          args: "--sarif-file-output=path/to/directory/snyk.sarif"  # Fixed to a single string
+          args: "--sarif-file-output=path/snyk.sarif"  # Updated to correct path
 
       - name: Check if SARIF file exists and print contents
         run: |
           ls -la  # List files to check if snyk.sarif exists
-          cat path/to/directory/snyk.sarif  # Display the contents of the SARIF file
+          cat path/snyk.sarif  # Display the contents of the SARIF file
+
+      - name: Upload SARIF report to GitHub
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: path/snyk.sarif  # Updated to correct path
+          token: ${{ secrets.GITHUB_TOKEN }}
+          wait-for-processing: true
