--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -1,4 +1,5 @@
-name: Snyk Security Scan with SARIF Upload and Issue Creation 
+name: Snyk Security Scan with SARIF Upload and Issue Creation
+
 on:
   push:
     branches:
@@ -23,29 +24,31 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           command: code test
-          args: "--sarif-file-output=path/snyk.sarif"
+          args: "--sarif-file-output=snyk.sarif"  # Ensure the file is saved in the correct location
 
       - name: Check if SARIF file exists and print contents
         run: |
           ls -la  # List files to check if snyk.sarif exists
-          cat path/snyk.sarif  # Display the contents of the SARIF file
+          cat snyk.sarif  # Display the contents of the SARIF file
 
       - name: Upload SARIF report to GitHub
+        id: upload-sarif
         uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: path/snyk.sarif
+          sarif_file: snyk.sarif
           token: ${{ secrets.GITHUB_TOKEN }}
           wait-for-processing: true
 
       - name: Create GitHub Issues from SARIF
         if: success() && steps.upload-sarif.outputs.upload-success == 'true'
         run: |
-          issues=$(cat path/snyk.sarif | jq -r '.runs[0].results[] | "\(.message.text) - URI: \(.locations[0].physicalLocation.artifactLocation.uri)"')
+          issues=$(jq -r '.runs[0].results[] | "\(.message.text) - URI: \(.locations[0].physicalLocation.artifactLocation.uri)"' snyk.sarif)
           
           for issue in $issues; do
             # Create issue for each vulnerability found
             curl -X POST \
               -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-              -d '{"title": "Security Issue: " + issue, "body": "Description: This issue was detected by SARIF scan. Please review.", "labels": ["security", "vulnerability"]}' \
+              -H "Accept: application/vnd.github.v3+json" \
+              -d "{\"title\": \"Security Issue: $issue\", \"body\": \"Description: This issue was detected by SARIF scan. Please review.\", \"labels\": [\"security\", \"vulnerability\"]}" \
               https://api.github.com/repos/${{ github.repository }}/issues
           done
