--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -4,48 +4,58 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
+
+permissions:
+  actions: write
+  issues: write  # Grant permission to create issues
+  security-events: write
 
 jobs:
-  snyk_security_scan:
+  security:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: Set up Snyk CLI
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/python@master
+        continue-on-error: true
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          command: code test
+          args: "--sarif-file-output=path/snyk.sarif"
+
+      - name: Check if SARIF file exists and print contents
         run: |
-          curl -sL https://github.com/snyk/snyk/releases/download/v1.1041.0/snyk-linux-amd64 -o /usr/local/bin/snyk
-          chmod +x /usr/local/bin/snyk
+          ls -la  # List files to check if snyk.sarif exists
+          cat path/snyk.sarif  # Display the contents of the SARIF file
 
-      - name: Authenticate Snyk CLI
-        run: snyk auth ${{ secrets.SNYK_TOKEN }}
-
-      - name: Run Snyk Security Scan
-        id: snyk_scan
-        run: |
-          snyk test --all-projects --json > snyk-report.json
-          snyk monitor --all-projects
-
-      - name: Upload SARIF Results to GitHub
-        if: ${{ always() }}
+      - name: Upload SARIF report to GitHub
         uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: snyk-report.json  # SARIF file output from Snyk
+          sarif_file: path/snyk.sarif
+          token: ${{ secrets.GITHUB_TOKEN }}
+          wait-for-processing: true
 
-      - name: Check for Vulnerabilities and Create Issue
-        if: ${{ steps.snyk_scan.outcome == 'failure' }}
+      - name: Create GitHub Issues from SARIF
+        if: success() && steps.upload-sarif.outputs.upload-success == 'true'
         run: |
-          echo "Vulnerabilities found, creating an issue"
-          curl -X POST https://api.github.com/repos/${{ github.repository }}/issues \
-            -H "Authorization: Bearer ${{ secrets.GH_PAT }}" \
-            -H "Accept: application/vnd.github.v3+json" \
-            -d @- <<EOF
-            {
-              "title": "Security vulnerabilities found in the code",
-              "body": "Snyk security scan has found vulnerabilities in the code. Please check the Snyk scan report for details.",
-              "labels": ["security", "bug"]
-            }
-            EOF
+          # Extract issues from SARIF file
+          issues=$(cat path/snyk.sarif | jq -r '.runs[0].results[] | "\(.message.text) - URI: \(.locations[0].physicalLocation.artifactLocation.uri)"')
+          
+          # If no issues found, exit early
+          if [ -z "$issues" ]; then
+            echo "No issues found in SARIF report"
+            exit 0
+          fi
+
+          # Iterate through the issues and create GitHub issues
+          for issue in $issues; do
+            echo "Creating issue: $issue"
+            curl -X POST \
+              -H "Authorization: token ${{ secrets.GH_PAT }}" \  # Use your PAT here
+              -d "{\"title\": \"Security Issue: $issue\", \"body\": \"Description: This issue was detected by SARIF scan. Please review.\", \"labels\": [\"security\", \"vulnerability\"]}" \
+              "https://api.github.com/repos/${{ github.repository }}/issues" \
+              -w "\nResponse code: %{http_code}\n"
+          done
